--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "vuetifyjs-mix-extension": "0.0.14"
     },
     "dependencies": {
+        "chart.js": "^2.9.3",
+        "vue-chartjs": "^3.5.1",
+        "vue-chartkick": "^0.6.1",
         "vue-router": "^3.4.3",
         "vuetify": "^2.3.10",
         "vuetify-loader": "^1.6.0",
