Finished front-page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -16,5 +16,72 @@
     "/js/app.a5c1c51beafdc9f8a83e.hot-update.js": "/js/app.a5c1c51beafdc9f8a83e.hot-update.js",
     "/js/app.464d5d1a7c1177f87b38.hot-update.js": "/js/app.464d5d1a7c1177f87b38.hot-update.js",
     "/js/app.970fdd84f4ce1384a572.hot-update.js": "/js/app.970fdd84f4ce1384a572.hot-update.js",
-    "/js/app.a794935ca9a91e7e38a6.hot-update.js": "/js/app.a794935ca9a91e7e38a6.hot-update.js"
+    "/js/app.a794935ca9a91e7e38a6.hot-update.js": "/js/app.a794935ca9a91e7e38a6.hot-update.js",
+    "/js/app.89befdae97744fc646df.hot-update.js": "/js/app.89befdae97744fc646df.hot-update.js",
+    "/js/app.755bce0d4215cd6dc0f7.hot-update.js": "/js/app.755bce0d4215cd6dc0f7.hot-update.js",
+    "/js/app.d2a5a0482ee85c4934b8.hot-update.js": "/js/app.d2a5a0482ee85c4934b8.hot-update.js",
+    "/js/app.6d014bd45a0557f91028.hot-update.js": "/js/app.6d014bd45a0557f91028.hot-update.js",
+    "/js/app.82daedc71f025933e718.hot-update.js": "/js/app.82daedc71f025933e718.hot-update.js",
+    "/js/app.40155eb4ac4dd47fef3e.hot-update.js": "/js/app.40155eb4ac4dd47fef3e.hot-update.js",
+    "/js/app.01631b1c536307308678.hot-update.js": "/js/app.01631b1c536307308678.hot-update.js",
+    "/js/app.b14da03994e41455401e.hot-update.js": "/js/app.b14da03994e41455401e.hot-update.js",
+    "/js/app.050cc371458bb54b4f85.hot-update.js": "/js/app.050cc371458bb54b4f85.hot-update.js",
+    "/js/app.7cd3877cfebf226f942f.hot-update.js": "/js/app.7cd3877cfebf226f942f.hot-update.js",
+    "/js/app.8fd7fb9093e368952fd3.hot-update.js": "/js/app.8fd7fb9093e368952fd3.hot-update.js",
+    "/js/app.f25f4f0a7b05b5664a5c.hot-update.js": "/js/app.f25f4f0a7b05b5664a5c.hot-update.js",
+    "/js/app.e58c2a8937f8c4b68fc1.hot-update.js": "/js/app.e58c2a8937f8c4b68fc1.hot-update.js",
+    "/js/app.bfbe445f4139edcc0221.hot-update.js": "/js/app.bfbe445f4139edcc0221.hot-update.js",
+    "/js/app.2959830fb8292b7a0c61.hot-update.js": "/js/app.2959830fb8292b7a0c61.hot-update.js",
+    "/js/app.b5505c9fac08440faf79.hot-update.js": "/js/app.b5505c9fac08440faf79.hot-update.js",
+    "/js/app.63172897e4311004e337.hot-update.js": "/js/app.63172897e4311004e337.hot-update.js",
+    "/js/app.0f624e046fdc4b577213.hot-update.js": "/js/app.0f624e046fdc4b577213.hot-update.js",
+    "/js/app.f960febe4d57c17570f1.hot-update.js": "/js/app.f960febe4d57c17570f1.hot-update.js",
+    "/js/app.49a676290e16ce71bce4.hot-update.js": "/js/app.49a676290e16ce71bce4.hot-update.js",
+    "/js/app.bfaa6976b73a23115435.hot-update.js": "/js/app.bfaa6976b73a23115435.hot-update.js",
+    "/js/app.5b77243df940fed3f060.hot-update.js": "/js/app.5b77243df940fed3f060.hot-update.js",
+    "/js/app.c69d3c83394c5952f18f.hot-update.js": "/js/app.c69d3c83394c5952f18f.hot-update.js",
+    "/js/app.a267d867c245eeac682d.hot-update.js": "/js/app.a267d867c245eeac682d.hot-update.js",
+    "/js/app.d81577ee4f603484d36f.hot-update.js": "/js/app.d81577ee4f603484d36f.hot-update.js",
+    "/js/app.52be5e5e0dc6eaf11057.hot-update.js": "/js/app.52be5e5e0dc6eaf11057.hot-update.js",
+    "/js/app.0b4bd8c51d11542686cc.hot-update.js": "/js/app.0b4bd8c51d11542686cc.hot-update.js",
+    "/js/app.3481ae22d40da01c1996.hot-update.js": "/js/app.3481ae22d40da01c1996.hot-update.js",
+    "/js/app.89aefdbd17bcd2f8797e.hot-update.js": "/js/app.89aefdbd17bcd2f8797e.hot-update.js",
+    "/js/app.d99a34813431fe115521.hot-update.js": "/js/app.d99a34813431fe115521.hot-update.js",
+    "/js/app.5a3713a46f9980a0f8e5.hot-update.js": "/js/app.5a3713a46f9980a0f8e5.hot-update.js",
+    "/js/app.2ecf92ab0d304ff66ba6.hot-update.js": "/js/app.2ecf92ab0d304ff66ba6.hot-update.js",
+    "/js/app.4ee37b0b4afa893278b6.hot-update.js": "/js/app.4ee37b0b4afa893278b6.hot-update.js",
+    "/js/app.7df8eed3ba52ef7f4a03.hot-update.js": "/js/app.7df8eed3ba52ef7f4a03.hot-update.js",
+    "/js/app.0d4217db052c8ac3a786.hot-update.js": "/js/app.0d4217db052c8ac3a786.hot-update.js",
+    "/js/app.b124ed9c34794bfe2f2a.hot-update.js": "/js/app.b124ed9c34794bfe2f2a.hot-update.js",
+    "/js/app.70d05654766340f037c5.hot-update.js": "/js/app.70d05654766340f037c5.hot-update.js",
+    "/js/app.acacf13ab78e68e29dcc.hot-update.js": "/js/app.acacf13ab78e68e29dcc.hot-update.js",
+    "/js/app.a4a0e25686c575e5b379.hot-update.js": "/js/app.a4a0e25686c575e5b379.hot-update.js",
+    "/js/app.65d37d10bcb0bdfe64f2.hot-update.js": "/js/app.65d37d10bcb0bdfe64f2.hot-update.js",
+    "/js/app.169a0a1b85fc91c41b93.hot-update.js": "/js/app.169a0a1b85fc91c41b93.hot-update.js",
+    "/js/app.c0fff3a38db8d3a7f9df.hot-update.js": "/js/app.c0fff3a38db8d3a7f9df.hot-update.js",
+    "/js/app.8c793e159cf62250ce06.hot-update.js": "/js/app.8c793e159cf62250ce06.hot-update.js",
+    "/js/app.a2b42050b77cce3533ed.hot-update.js": "/js/app.a2b42050b77cce3533ed.hot-update.js",
+    "/js/app.f0e2d316d577c0f49e7d.hot-update.js": "/js/app.f0e2d316d577c0f49e7d.hot-update.js",
+    "/js/app.3f25f5228d42dfbac5b9.hot-update.js": "/js/app.3f25f5228d42dfbac5b9.hot-update.js",
+    "/js/app.eeae9ffc000c75ffc8d1.hot-update.js": "/js/app.eeae9ffc000c75ffc8d1.hot-update.js",
+    "/js/app.2de5ada4eeab484465cc.hot-update.js": "/js/app.2de5ada4eeab484465cc.hot-update.js",
+    "/js/app.9bb8c26245e4bb836156.hot-update.js": "/js/app.9bb8c26245e4bb836156.hot-update.js",
+    "/js/app.25bbcaa4307fdccd098a.hot-update.js": "/js/app.25bbcaa4307fdccd098a.hot-update.js",
+    "/js/app.9ac9ed990b04f26824b1.hot-update.js": "/js/app.9ac9ed990b04f26824b1.hot-update.js",
+    "/js/app.3754905b3fa7a56a8b00.hot-update.js": "/js/app.3754905b3fa7a56a8b00.hot-update.js",
+    "/js/app.90ae1ba0b3974b928473.hot-update.js": "/js/app.90ae1ba0b3974b928473.hot-update.js",
+    "/js/app.40c571cb86c5f55eab74.hot-update.js": "/js/app.40c571cb86c5f55eab74.hot-update.js",
+    "/js/app.cb8dc236196d5d52bd16.hot-update.js": "/js/app.cb8dc236196d5d52bd16.hot-update.js",
+    "/js/app.2bfadc07e42f65b613b4.hot-update.js": "/js/app.2bfadc07e42f65b613b4.hot-update.js",
+    "/js/app.a96eefe590bf70eb19f6.hot-update.js": "/js/app.a96eefe590bf70eb19f6.hot-update.js",
+    "/js/app.a694488374dc14874991.hot-update.js": "/js/app.a694488374dc14874991.hot-update.js",
+    "/js/app.4726c62ecc24ce5f9abf.hot-update.js": "/js/app.4726c62ecc24ce5f9abf.hot-update.js",
+    "/js/app.4e9405fa4022d02eea54.hot-update.js": "/js/app.4e9405fa4022d02eea54.hot-update.js",
+    "/js/app.f0480eb91510b53c73b5.hot-update.js": "/js/app.f0480eb91510b53c73b5.hot-update.js",
+    "/js/app.2811e6f0e7971b27aae4.hot-update.js": "/js/app.2811e6f0e7971b27aae4.hot-update.js",
+    "/js/app.2943f53f06a3afc8fb5a.hot-update.js": "/js/app.2943f53f06a3afc8fb5a.hot-update.js",
+    "/js/app.be6837d7f7608e8f88b2.hot-update.js": "/js/app.be6837d7f7608e8f88b2.hot-update.js",
+    "/js/app.7d2646609d4d3ef19c5a.hot-update.js": "/js/app.7d2646609d4d3ef19c5a.hot-update.js",
+    "/js/app.c8d08f4e321112f7733a.hot-update.js": "/js/app.c8d08f4e321112f7733a.hot-update.js",
+    "/js/app.995e6f3be15b95590a8a.hot-update.js": "/js/app.995e6f3be15b95590a8a.hot-update.js"
 }
