Added excel stuff. Need excel diff by tonight

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,13 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.0940b70c55f87c1ab3b2.hot-update.js": "/js/app.0940b70c55f87c1ab3b2.hot-update.js",
+    "/js/app.bd8b8b824a54c617a66e.hot-update.js": "/js/app.bd8b8b824a54c617a66e.hot-update.js",
+    "/js/app.1d47d02a69a23a0e959b.hot-update.js": "/js/app.1d47d02a69a23a0e959b.hot-update.js",
+    "/js/app.26542d16a4ff0c8c4d78.hot-update.js": "/js/app.26542d16a4ff0c8c4d78.hot-update.js",
+    "/js/app.5a176556a542cd594710.hot-update.js": "/js/app.5a176556a542cd594710.hot-update.js",
+    "/js/app.66930c93c0ebe572be3c.hot-update.js": "/js/app.66930c93c0ebe572be3c.hot-update.js",
+    "/js/app.2b6ae21fb6314bf6aafe.hot-update.js": "/js/app.2b6ae21fb6314bf6aafe.hot-update.js",
+    "/js/app.eb1d11d7974aec953132.hot-update.js": "/js/app.eb1d11d7974aec953132.hot-update.js",
+    "/js/app.184a4f4ccefce85f6add.hot-update.js": "/js/app.184a4f4ccefce85f6add.hot-update.js"
 }
