Moved search tab to tool bar. Added Home button. Logging out will clear internal states now.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,42 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.e05a0f7f7556b646fca6.hot-update.js": "/js/app.e05a0f7f7556b646fca6.hot-update.js",
+    "/js/app.2a8aba4317d35c10a3ec.hot-update.js": "/js/app.2a8aba4317d35c10a3ec.hot-update.js",
+    "/js/app.f900a07ab914820193cb.hot-update.js": "/js/app.f900a07ab914820193cb.hot-update.js",
+    "/js/app.8143cca714fc2828cfad.hot-update.js": "/js/app.8143cca714fc2828cfad.hot-update.js",
+    "/js/app.9950ad6a0ebcb0f34a1d.hot-update.js": "/js/app.9950ad6a0ebcb0f34a1d.hot-update.js",
+    "/js/app.3075856aa72d1caef233.hot-update.js": "/js/app.3075856aa72d1caef233.hot-update.js",
+    "/js/app.67733ecf18e7f5542e1c.hot-update.js": "/js/app.67733ecf18e7f5542e1c.hot-update.js",
+    "/js/app.64b8901b1a85b4c226ec.hot-update.js": "/js/app.64b8901b1a85b4c226ec.hot-update.js",
+    "/js/app.8b5fc15a06a2bd8d9d63.hot-update.js": "/js/app.8b5fc15a06a2bd8d9d63.hot-update.js",
+    "/js/app.b59274aa16fc5d169777.hot-update.js": "/js/app.b59274aa16fc5d169777.hot-update.js",
+    "/js/app.0cdcec54a17d2dee81d5.hot-update.js": "/js/app.0cdcec54a17d2dee81d5.hot-update.js",
+    "/js/app.b43e498737e94724268d.hot-update.js": "/js/app.b43e498737e94724268d.hot-update.js",
+    "/js/app.ec724d31b747ad93ea4f.hot-update.js": "/js/app.ec724d31b747ad93ea4f.hot-update.js",
+    "/js/app.ce5ae36993945fbde152.hot-update.js": "/js/app.ce5ae36993945fbde152.hot-update.js",
+    "/js/app.0aeb355d281696b0251a.hot-update.js": "/js/app.0aeb355d281696b0251a.hot-update.js",
+    "/js/app.fc02cfede913391f43e9.hot-update.js": "/js/app.fc02cfede913391f43e9.hot-update.js",
+    "/js/app.edf90aac7f04d065b71a.hot-update.js": "/js/app.edf90aac7f04d065b71a.hot-update.js",
+    "/js/app.1540c018091ee5dbd19a.hot-update.js": "/js/app.1540c018091ee5dbd19a.hot-update.js",
+    "/js/app.d675e125632dad9a1df5.hot-update.js": "/js/app.d675e125632dad9a1df5.hot-update.js",
+    "/js/app.fb05a621279013ac065b.hot-update.js": "/js/app.fb05a621279013ac065b.hot-update.js",
+    "/js/app.c1ff0f998cd00ee4ec98.hot-update.js": "/js/app.c1ff0f998cd00ee4ec98.hot-update.js",
+    "/js/app.c4d10529c6550430743e.hot-update.js": "/js/app.c4d10529c6550430743e.hot-update.js",
+    "/js/app.973bb80d6708e82581c1.hot-update.js": "/js/app.973bb80d6708e82581c1.hot-update.js",
+    "/js/app.15052c9c18ca4f7dff56.hot-update.js": "/js/app.15052c9c18ca4f7dff56.hot-update.js",
+    "/js/app.f5057a67a74730ec46d3.hot-update.js": "/js/app.f5057a67a74730ec46d3.hot-update.js",
+    "/js/app.7f41681d303485e7f6b9.hot-update.js": "/js/app.7f41681d303485e7f6b9.hot-update.js",
+    "/js/app.ad52763df7724ca9d676.hot-update.js": "/js/app.ad52763df7724ca9d676.hot-update.js",
+    "/js/app.2d947203c072eae2125e.hot-update.js": "/js/app.2d947203c072eae2125e.hot-update.js",
+    "/js/app.f930f1bc9a34a97ea98a.hot-update.js": "/js/app.f930f1bc9a34a97ea98a.hot-update.js",
+    "/js/app.fdc5df56df3a16901770.hot-update.js": "/js/app.fdc5df56df3a16901770.hot-update.js",
+    "/js/app.a617babb31ece88cb57d.hot-update.js": "/js/app.a617babb31ece88cb57d.hot-update.js",
+    "/js/app.1a9f21588e16cad8db44.hot-update.js": "/js/app.1a9f21588e16cad8db44.hot-update.js",
+    "/js/app.531aa586d61e443e7aa0.hot-update.js": "/js/app.531aa586d61e443e7aa0.hot-update.js",
+    "/js/app.3f0eada7b53329522ca0.hot-update.js": "/js/app.3f0eada7b53329522ca0.hot-update.js",
+    "/js/app.0ffb77e3247ced8878dc.hot-update.js": "/js/app.0ffb77e3247ced8878dc.hot-update.js",
+    "/js/app.b88840bf70b45807521d.hot-update.js": "/js/app.b88840bf70b45807521d.hot-update.js",
+    "/js/app.177929a5ae99575df0c6.hot-update.js": "/js/app.177929a5ae99575df0c6.hot-update.js",
+    "/js/app.b51453d3cc82795c3b69.hot-update.js": "/js/app.b51453d3cc82795c3b69.hot-update.js"
 }
